Fixing leaderboard not showing

--- a/client/src/main/resources/client/stylesheets/pixelart.css
+++ b/client/src/main/resources/client/stylesheets/pixelart.css
@@ -79,7 +79,7 @@
 
 }
 
-.leaderboardImage {
+#leaderboardImage {
     -fx-image: url("../images/leaderboard.png");
 }
 
